Slug-Generator.html

--- a/Slug-Generator.html
+++ b/Slug-Generator.html
@@ -429,8 +429,8 @@
         </div>
     </main>
     <br>
-       <h3>How to Use Slug Generator Tool</h3>
-<p>Follow these simple steps to generate an optimized slug for your URL:</p>
+       <h3 style="text-align: center; margin-top: 20px;">How to Use Slug Generator Tool</h3>
+<p style="text-align: center; max-width: 600px; margin: 0 auto;">Follow these simple steps to generate an optimized slug for your URL:</p>
 <div class="slug-steps">
     <p><strong>1.</strong> Enter your text into the input box.</p>
     <p><strong>2.</strong> Select a separator: Choose between a hyphen (-) or an underscore (_), depending on your preference.</p>
@@ -441,7 +441,7 @@
     <p><strong>4.</strong> Click on the "Generate Slug" button.</p>
     <p><strong>5.</strong> Get your optimized slug, ready to be used in your URL.</p>
 </div>
-<p>This tool ensures you have a great, SEO-friendly slug to enhance your website’s visibility and improve user experience.</p>
+<p style="text-align: center; max-width: 600px; margin: 0 auto;">This tool ensures you have a great, SEO-friendly slug to enhance your website’s visibility and improve user experience.</p>
 <br>
           <section id="faq">
     <div class="container">
