Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -429,6 +429,20 @@
     </a>
 </div>
     </main>
+    <br>
+    <h3 style="text-align: center; margin-top: 20px;">Word Count & Keyword Density Calculator</h3>
+<p style="text-align: center; max-width: 600px; margin: 0 auto;">A Word Count & Keyword Density Calculator helps analyze the number of words in a text and the percentage of keyword occurrences, essential for SEO optimization.</p>
+
+<div style="background: #f9f9f9; padding: 15px; border-radius: 10px; max-width: 600px; margin: 20px auto; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); text-align: center;">
+    <p><strong>1.</strong> Enter or paste your text into the input box upto 5000 words due to speed of the webpage</p>
+    <p><strong>2.</strong> Click the "Count Words" button to get the total number of words.</p>
+    <p><strong>3.</strong> Enter a keyword in the provided field.</p>
+    <p><strong>4.</strong> Click the "Calculate Density" button to get the keyword percentage.</p>
+    <p><strong>5.</strong> Get the keyword density, which shows how often the keyword appears in relation to the total words.</p>
+</div>
+
+<p style="text-align: center; max-width: 600px; margin: 0 auto;">This tool ensures your content maintains an ideal keyword density for better search engine ranking while avoiding keyword stuffing.</p>
+<br>
      <div class="faq">
     <h3>1. What is Keyword Density?</h3>
     <p>Keyword density refers to the percentage of times a keyword appears on a web page in relation to the total number of words on that page. It is an important factor for SEO as it helps search engines understand the relevance of the page to specific search queries.</p>
