Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Count words and calculate keyword percentages for SEO optimization in one click. Analyze your content with our Word Count and Keyword Density Tool. ">
+    <meta name="description" content="Count words and calculate keyword density with percentages chart for SEO optimization in one click. Analyze your content with our Word Count and Keyword Density Tool. ">
 
 <link rel="canonical" href="https://keywordsfromurls.com/Keyword-Density-And-Wordcount-Tool.html">
 
-    <title>Keyword Density Tool</title>
+    <title>Keyword Density with percentagae chart and wordcount</title>
     <style>
         * {
             margin: 0;
@@ -430,14 +430,14 @@
 </div>
     </main>
     <br>
-    <h3 style="text-align: center; margin-top: 20px;">Word Count & Keyword Density Calculator</h3>
+    <h3 style="text-align: center; margin-top: 20px;">Word count and keywords density with Percentage Chart</h3> <br>
 <p style="text-align: center; max-width: 600px; margin: 0 auto;">A Word Count & Keyword Density Calculator helps analyze the number of words in a text and the percentage of keyword occurrences, essential for SEO optimization.</p>
 
 <div style="background: #f9f9f9; padding: 15px; border-radius: 10px; max-width: 600px; margin: 20px auto; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); text-align: center;">
     <p><strong>1.</strong> Enter or paste your text into the input box upto 5000 words due to speed of the webpage</p>
     <p><strong>2.</strong> Click the "Count Words" button to get the total number of words.</p>
     <p><strong>3.</strong> Enter a keyword in the provided field.</p>
-    <p><strong>4.</strong> Click the "Calculate Density" button to get the keyword percentage.</p>
+    <p><strong>4.</strong> Click the "Calculate Density" button to get the keyword percentage and word count of the enter text.</p>
     <p><strong>5.</strong> Get the keyword density, which shows how often the keyword appears in relation to the total words.</p>
 </div>
 
