Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -430,6 +430,13 @@
 </div>
     </main>
     <br>
+            <div class="container">
+            <textarea id="textInput" placeholder="Enter your text here..."></textarea>
+            <button onclick="countWords()">Count Words</button>
+            <button onclick="calculateKeywordDensity()">Calculate Density</button>
+            <div id="output" class="output"></div>
+        </div>
+
     <h3 style="text-align: center; margin-top: 20px;">Word count and keywords density with Percentage Chart</h3> <br>
 <p style="text-align: center; max-width: 600px; margin: 0 auto;">A Word Count & Keyword Density Calculator helps analyze the number of words in a text and the percentage of keyword occurrences, essential for SEO optimization.</p>
 
