Keyword-Density-And-Wordcount-Tool.html

--- a/Keyword-Density-And-Wordcount-Tool.html
+++ b/Keyword-Density-And-Wordcount-Tool.html
@@ -430,6 +430,7 @@
 </div>
     </main>
     <br>
+    <h1>Keywords Density with Percentage and Word Count Tool</h1>
             <div class="container">
             <textarea id="textInput" placeholder="Enter your text here..."></textarea>
             <button onclick="countWords()">Count Words</button>
