--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ p {
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
 
 <script type="application/ld+json">
-    {
+{
   "@context": "https://schema.org",
   "@type": "WebApplication",
   "name": "Keywords from urls Extractor from sitemap Tool",
@@ -417,6 +417,7 @@ p {
     "target": "https://keywordsfromurls.com/",
     "actionStatus": "ActiveActionStatus"
   }
+}
 </script>
     <script type="application/ld+json">
 {
@@ -522,7 +523,7 @@ p {
 </div>
     </main>
         <div class="container">
-            <h1>Keywords from URL Extractor Tool | Keywords Extractor from Sitemap</h1>
+            <h1>Extract Keywords from URLs & Sitemaps | Keywords Extractor Tool</h1>
         <textarea id="urlInput" placeholder="Paste up to 500 URLs here"></textarea>
         <div class="button-container">
             <button id="copyButton">Copy URLs</button>
