--- a/chrome-extension-for-keyword-extraction-from-urls.html
+++ b/chrome-extension-for-keyword-extraction-from-urls.html
@@ -5,172 +5,360 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keywords from URLs Chrome Extension</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1, h2 {
-            color: #0073e6;
-        }
-        a {
-            color: #0073e6;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            color: #fff;
-            background-color: #0073e6;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        .button:hover {
-            background-color: #005bb5;
-        }
-        ul {
-            list-style: disc;
-            margin-left: 20px;
-        }
-          /* Header */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 30px;
-            background-color: #007BFF;
-            color: white;
-        }
+/* General Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        .header .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
+/* Body */
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: #333;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 0;
+}
 
-        .header nav {
-            display: flex;
-            gap: 15px;
-        }
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-color: #007BFF;
+    color: white;
+}
 
-        .header nav a {
-            color: white;
-            text-decoration: none;
-            padding: 8px 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
+.header .logo {
+    font-size: 24px;
+    font-weight: bold;
+}
 
-        .header nav a:hover {
-            background-color: #0056b3;
-        }
- /* Footer */
-        .footer {
-            background-color: #007BFF;
-            color: white;
-            padding: 15px 30px;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
+.header nav {
+    display: flex;
+    gap: 15px;
+}
 
-        .footer .left {
-            font-size: 14px;
-        }
+.header nav a {
+    color: white;
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
 
-        .footer .right {
-            display: flex;
-            gap: 15px;
-        }
+.header nav a:hover {
+    background-color: #0056b3;
+}
 
-        .footer .right a {
-            color: white;
-            text-decoration: none;
-            font-size: 14px;
-        }
+/* Main Content */
+.main {
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-        .footer .right a:hover {
-            text-decoration: underline;
-        }
+.categories {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
 
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .header nav {
-                flex-wrap: wrap;
-                gap: 10px;
-            }
+.categories button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
 
-            .categories {
-                flex-wrap: wrap;
-                gap: 10px;
-            }
+.categories button:hover {
+    background-color: #0056b3;
+}
 
-            .tool-container textarea {
-                height: 150px;
-            }
+.container {
+    position: relative;
+    width: 100%;
+    max-width: 1200px;
+    margin: 20px auto;
+    box-sizing: border-box;
+}
 
-            .footer {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
+textarea {
+    width: 100%;
+    height: 250px;
+    padding: 10px;
+    font-size: 16px;
+    box-sizing: border-box;
+    resize: none;
+    margin-bottom: 10px;
+}
 
-            .footer .right {
-                flex-direction: column;
-            }
-            p {
-                text-align: center;
-                font-size: 1rem;
-                margin-top: 20px;
-            }
-        }
+button {
+    padding: 8px 12px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+    margin-right: 10px;
+}
 
-        /* Container to center the section */
-        .share-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            margin: 20px auto;
-            max-width: 600px;
-            padding: 20px;
-        }
+button:hover {
+    background-color: #0056b3;
+}
 
-        /* Flexbox for share icons */
-        .share-icons {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-        .share-icons a {
-            color: #333;
-            font-size: 24px;
-            text-decoration: none;
-             padding: 0 5px;
-        }
+.keyword-list {
+    text-align: center;
+    margin-top: 20px;
+    padding: 13px;
+    border: 2px solid #ddd;
+    background-color: #f9f9f9;
+    position: relative;
+}
 
-        .share-icons a:hover {
-            color: #007BFF;
-        }
+.copy-keywords-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    font-size: 12px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.copy-keywords-button:hover {
+    background-color: #0056b3;
+}
+
+/* Footer */
+.footer {
+    background-color: #007BFF;
+    color: white;
+    padding: 15px 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer .left {
+    font-size: 14px;
+}
+
+.footer .right {
+    display: flex;
+    gap: 15px;
+}
+
+.footer .right a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.footer .right a:hover {
+    text-decoration: underline;
+}
+
+/* Share Container */
+.share-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px auto;
+    max-width: 600px;
+    padding: 20px;
+}
+
+.share-icons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.share-icons a {
+    color: #333;
+    font-size: 24px;
+    text-decoration: none;
+    padding: 0 5px;
+}
+
+.share-icons a:hover {
+    color: #007BFF;
+}
+
+/* FAQ Section */
+#faq {
+    background-color: #f9f9f9;
+    padding: 40px 20px;
+    margin-top: 50px;
+}
+
+#faq h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.faq-item {
+    margin-bottom: 20px;
+}
+
+.faq-item h3 {
+    font-size: 1.2em;
+    color: #333;
+}
+
+.faq-item p {
+    font-size: 1em;
+    color: #666;
+    line-height: 1.6;
+}
+
+/* Dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-btn {
+    background-color: #007bff;
+    color: white;
+    padding: 12px 18px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 100%;
+    max-width: 250px;
+    text-align: left;
+}
+
+.dropdown-btn:hover {
+    background-color: #0056b3;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    background-color: #0056b3;
+    min-width: 100%;
+    max-width: 250px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    overflow: hidden;
+    z-index: 1000;
+}
+
+.dropdown-content a {
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    transition: background 0.3s;
+    border-bottom: 1px solid #ddd;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+/* Typography */
+h1, h2, h3 {
+    font-size: 30px;
+    margin: 40px 0;
+    color: #222;
+    text-align: center;
+    font-weight: bold;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.8;
+    color: #444;
+    text-align: justify;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0 15px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .header nav {
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+    }
+
+    .header nav a {
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    .categories {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    textarea {
+        height: 150px;
+        font-size: 14px;
+    }
+
+    button {
+        font-size: 12px;
+        padding: 5px 10px;
+    }
+
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer .right {
+        flex-direction: column;
+    }
+
+    .dropdown-btn {
+        width: 100%;
+    }
+
+    .dropdown-content {
+        width: 100%;
+    }
+}   
     </style>
-    <meta name="description" content="Download the Keywords from URLs Chrome Extension for quick keyword extraction, grouping, density analysis, and SEO-friendly slug generation. Ideal for bloggers, SEO professionals, and content creators.">
+    <meta name="description" content=" Get the Keywords from URLs Chrome Extension for quick keyword extraction, grouping, density analysis, and SEO-friendly slug generation. Ideal for bloggers, SEO professionals, and content creators.">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -191,6 +379,43 @@
 }
 </script>
 <body>
+        <!-- Header -->
+    <header class="header">
+        <div class="logo">Keywords From Urls</div>
+        <nav>
+            <a href="https://keywordsfromurls.com/">Home</a>
+            <a href="chrome-extension-for-keyword-extraction-from-urls.html">Chrome Extention</a>
+              <a href="about-us.html" target="_blank">About Us</a>
+            <a href="contact-us.html" target="_blank">Contact Us</a>
+                   <div class="dropdown-menu-container">
+  <div class="dropdown">
+    <button class="dropdown-btn" onclick="toggleDropdown(event)">Url Tools</button>
+    <div class="dropdown-content" style="display: none;">
+      <a href="sitemap-url-extractor-tool.html">Sitemap URL Extractor</a>
+      <a href="title-url-generator.html">Title URL Generator</a>
+      <a href="url-encoder-decoder.html">URL Encoder/Decoder</a>
+      <a href="url-parser-tool.html">URL Parser</a>                           
+    </div>
+  </div>
+</div>
+ </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main class="main">
+        <div class="categories">
+    <a href="keywords-grouping.html" target="_blank">
+        <button>Keyword Grouping</button>
+    </a>
+    <a href="Slug-Generator.html" target="_blank">
+        <button>Slug Generator</button>
+    </a>
+    <a href="Keyword-Density-And-Wordcount-Tool.html" target="_blank">
+        <button>Keyword Density</button>
+    </a>
+</div>
+    </main>
+
      <!-- Header -->
     <header class="header">
         <div class="logo">Keywords From Urls</div>
@@ -230,7 +455,7 @@
             If you have any questions or encounter issues contact us at <a href="mailto:isyed486@gmail.com">isyed486@gmail.com</a>.
         </p>
     </div>
-   <!-- Footer -->
+     <!-- Footer -->
     <footer class="footer"><div class="left">&copy; 2025 Keywords From Urls | <a href="//www.dmca.com/Protection/Status.aspx?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f" title="DMCA.com Protection Status" class="dmca-badge"> 
 <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=6cf02a5f-5f1e-483c-88f4-70ff117b638f"  alt="DMCA.com Protection Status" /></a>
 <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
