url-parser-tool.html

--- a/url-parser-tool.html
+++ b/url-parser-tool.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title>Url Encoder/decoder online tool</title>
+ <title>Url Parser online tool</title>
 
 <style>
         /* General Reset */
@@ -489,30 +489,37 @@
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Title URL Generator",
-  "url": "https://keywordsfromurls.com/title-url-generator.html",
-  "description": "A tool to generate SEO-friendly titles and URLs for your content. Use this tool to create optimized slugs and titles that help with SEO rankings.",
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": "https://keywordsfromurls.com/title-url-generator.html"
+  "@type": "WebApplication",
+  "name": "URL Parser Tool",
+  "description":Use our URL Parser Tool to extract meaningful keywords from any URL. Improve your SEO, optimize content, and analyze URLs quickly and efficiently."
+",
+  "applicationCategory": "Utility",
+  "operatingSystem": "All",
+  "browserRequirements": "Requires JavaScript",
+  "url": "https://keywordsfromurls.com/",
+  "author": {
+    "@type": "Person",
+    "name": "Syed Ismail"
   },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Keywords From URLs",
-    "url": "https://keywordsfromurls.com",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://keywordsfromurls.com/logo.png"
-    }
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
   },
   "potentialAction": {
     "@type": "Action",
-    "name": "Generate Title and URL",
-    "target": "https://keywordsfromurls.com/title-url-generator.html#generate"
-  },
-  "keywords": "Title generator, URL generator, SEO tool, slugs, keyword optimization"
+    "name": "Extract Keywords",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://keywordsfromurls.com/",
+      "actionPlatform": [
+        "http://schema.org/DesktopWebPlatform",
+        "http://schema.org/MobileWebPlatform"
+      ]
+    }
+  }
 }
+
 </script>
 
    
