--- a/sitemap-url-extractor-tool.html
+++ b/sitemap-url-extractor-tool.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title>Url Encoder/decoder online tool</title>
+ <title>Sitemap Url extractor tool[Yoast and Rankmath]</title>
 
 <style>
         /* General Reset */
