url-encoder-decoder.html

--- a/url-encoder-decoder.html
+++ b/url-encoder-decoder.html
@@ -456,12 +456,12 @@
        {
   "@context": "https://schema.org",
   "@type": "WebPage",
-  "name": "Title URL Generator",
+  "name": "Url encoder and decoder tool online",
   "url": "https://keywordsfromurls.com/title-url-generator.html",
-  "description": "A tool to generate SEO-friendly titles and URLs for your content. Use this tool to create optimized slugs and titles that help with SEO rankings.",
+  "description": "A tool to generate SEO-friendly url encoder and decoder tool online",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://keywordsfromurls.com/title-url-generator.html"
+    "@id": "https://keywordsfromurls.com/url-encoder-decoder.html"
   },
   "publisher": {
     "@type": "Organization",
@@ -477,7 +477,7 @@
     "name": "Generate Title and URL",
     "target": "https://keywordsfromurls.com/title-url-generator.html#generate"
   },
-  "keywords": "Title generator, URL generator, SEO tool, slugs, keyword optimization"
+  "keywords": "Url encoder decoder tool online, online url encoder decoder tool."
 }
 </script>
   
