url-parser-tool.html

--- a/url-parser-tool.html
+++ b/url-parser-tool.html
@@ -491,7 +491,7 @@
   "@context": "https://schema.org",
   "@type": "WebApplication",
   "name": "URL Parser Tool",
-  "description":Use our URL Parser Tool to extract meaningful keywords from any URL. Improve your SEO, optimize content, and analyze URLs quickly and efficiently."
+ "description": "Use our URL Parser Tool to extract meaningful keywords from any URL. Improve your SEO, optimize content, and analyze URLs quickly and efficiently."
 ",
   "applicationCategory": "Utility",
   "operatingSystem": "All",
