--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title>Keywords from URLs Extractor|Extract URLs or Keywords from Sitemap in One Click</title>
+ <title>Extract URLs or Keywords from Sitemap</title>
 
     <style>
         /* General Reset */
