url-parser-tool.html

--- a/url-parser-tool.html
+++ b/url-parser-tool.html
@@ -486,13 +486,12 @@
             }
         }   
 </style>
-    <script type="application/ld+json">
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
   "name": "URL Parser Tool",
- "description": "Use our URL Parser Tool to extract meaningful keywords from any URL. Improve your SEO, optimize content, and analyze URLs quickly and efficiently."
-",
+  "description": "Use our URL Parser Tool to extract meaningful keywords from any URL. Improve your SEO, optimize content, and analyze URLs quickly and efficiently.",
   "applicationCategory": "Utility",
   "operatingSystem": "All",
   "browserRequirements": "Requires JavaScript",
@@ -519,9 +518,7 @@
     }
   }
 }
-
 </script>
-
    
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11525935043'); </script>
 <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-11525935043/y2SxCPHExoMaEMOf__cq'}); </script>
