--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
- <title>Extract URLs or Keywords from Sitemap</title>
+ <title> Extract keywords from URL </title>
 
     <style>
         /* General Reset */
@@ -407,7 +407,7 @@ p {
 {
   "@context": "https://schema.org",
   "@type": "WebApplication",
-  "name": "Keywords from urls Extractor from sitemap Tool",
+  "name": "Extract keywords from URL",
   "url": "https://keywordsfromurls.com/",
   "description": "Extract relevant keywords from URLs or text with our Keyword Extractor tool. Get keywords instantly and use them for your SEO or content creation needs.",
   "mainEntityOfPage": "https://keywordsfromurls.com/",
@@ -523,7 +523,7 @@ p {
 </div>
     </main>
         <div class="container">
-            <h1>Extract Keywords from URLs & Sitemaps | Keywords Extractor Tool</h1>
+            <h1>Extract keywords from URL</h1>
         <textarea id="urlInput" placeholder="Paste up to 500 URLs here"></textarea>
         <div class="button-container">
             <button id="copyButton">Copy URLs</button>
