--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Extract Bulk or single keywrods from Bulk or single urls in one click.">
+    <meta name="description" content="Extract Bulk or single keywords from Bulk or single URLs in one click instantly.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="canonical" href="https://keywordsfromurls.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -409,62 +409,14 @@ p {
   "@type": "WebApplication",
   "name": "Extract keywords from URL",
   "url": "https://keywordsfromurls.com/",
-  "description": "Extract relevant keywords from URLs or text with our Keyword Extractor tool. Get keywords instantly and use them for your SEO or content creation needs.",
-  "mainEntityOfPage": "https://keywordsfromurls.com/",
+  "description": "Extract Bulk or single keywords from Bulk or single URLs in one click instantly."
+    "mainEntityOfPage": "https://keywordsfromurls.com/",
   "potentialAction": {
     "@type": "Action",
-    "name": "Extract Keywords",
+    "name": "Extract Keywords from URLs",
     "target": "https://keywordsfromurls.com/",
     "actionStatus": "ActiveActionStatus"
   }
-}
-</script>
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "What is the purpose of the Keywords from URLs tool?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The Keywords from URLs tool extracts meaningful keywords from a segment of a URL. It helps you identify relevant keywords for SEO, content creation, or competitive analysis, making it easier to enhance your website's visibility on search engines."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "How does the Keyword Extractor tool work?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The Keyword Extractor tool works by analyzing a URL and extracting the last meaningful segment of the URL path. It ignores file extensions (e.g., `.html`) and domain names (e.g., `.com`), providing you with precise keywords that you can use to improve your content and SEO strategy."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Can I use the Keywords from URLs tool for any URL?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Yes, you can use the Keywords from URLs tool for any valid URL. The tool is designed to handle various types of URLs, including product pages, blog posts, and category pages, making it a versatile tool for extracting keywords from different types of online content."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Is it necessary to log in to use the Keyword Extractor tool?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "No, you don’t need to log in to use the Keyword Extractor tool. Simply paste the URL into the input field, and the tool will instantly generate the keywords for you without requiring an account or login."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "How can the Keyword Grouping and Keyword Density tools benefit my SEO strategy?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The Keyword Grouping tool helps you organize keywords into related groups, improving content relevance and targeting. The Keyword Density tool helps you calculate how often certain keywords appear in your content, ensuring optimal keyword usage for better SEO performance. Both tools work together to refine and optimize your content strategy."
-      }
-    }
-  ]
 }
 </script>
 
@@ -641,10 +593,10 @@ p {
         }
     </script>
     <br>
-<h2>How Keywords from urls which is extract bulk keywords from bulk urls(from sitemap or anywhere) works ?</h2>
-<p>If you have sitemap urls but confusing how to extract and how to get urls and keywords from that this tools solve the this issue and provide you to bulk keywrods from bulk url upto 500 urls due to maintain speed of the web page </p>
+<h2>How Bulk Keyword Extraction from URLs Works</h2>
+<p>If you have sitemap URLs but are confused about how to extract and how to get URLs and keywords from that these tools solve this issue and provide you with bulk keywords from bulk URLs upto 500 URLs due to maintain the speed of the web page </p>
 <p>
-    Managing website data efficiently requires extracting meaningful keywords from URLs. This process helps in categorizing blog content, improving SEO, and structuring website data effectively. Our tool simplifies this task for you.
+    Managing website data efficiently requires extracting meaningful keywords from URLs. This process helps categorize blog content, improve SEO, and effectively structure website data. Our tool simplifies this task for you.
 </p>
 
 <p>
@@ -662,7 +614,7 @@ p {
 <p>
     Extracting keywords from URLs helps in organizing data efficiently, enhancing website visibility, and ensuring a more structured approach to content management.
 </p>
-<p>So blogger or seo experts this for you with absoulutely free when you required search it or bookmark this site and explore other tools also that also free for you. </p>
+<p>So blogger or seo experts, this is for you with absolutely free when you require search it or bookmark this site and explore other tools also that are also free for you. </p>
         <p>Discover other tools: <a href="keywords-grouping.html">Keyword Grouping Tool</a>, <a href="Slug-Generator.html">Slug Generator</a>, and <a href="Keyword-Density-And-Wordcount-Tool.html">Keyword Density Tool</a>.</p>
 
     </div>
@@ -675,32 +627,7 @@ p {
                 <a href="https://wa.me/?text=Check%20out%20this%20awesome%20tool%20for%20extracting%20keywords%20from%20URLs:%20https://keywordsfromurls.com" target="_blank" title="Share on WhatsApp"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
-    <!-- FAQ Section -->
-<section id="faq">
-    <div class="container">
-        <h2>Frequently Asked Questions (FAQ)</h2>
-        <div class="faq-item">
-            <h3>What is the purpose of the Keywords from URLs tool?</h3>
-            <p>The Keywords from URLs tool extracts meaningful keywords from segment of a URL. It helps you identify relevant keywords for SEO, content creation, or competitive analysis, making it easier to enhance your website's visibility on search engines.</p>
-        </div>
-        <div class="faq-item">
-            <h3>How does the Keyword Extractor tool work?</h3>
-            <p>The Keyword Extractor tool works by analyzing a URL and extracting the last meaningful segment of the URL path. It ignores file extensions (e.g., `.html`) and domain names (e.g., `.com`), providing you with precise keywords that you can use to improve your content and SEO strategy.</p>
-        </div>
-        <div class="faq-item">
-            <h3>Can I use the Keywords from URLs tool for any URL?</h3>
-            <p>Yes, you can use the Keywords from URLs tool for any valid URL. The tool is designed to handle various types of URLs, including product pages, blog posts, and category pages, making it a versatile tool for extracting keywords from different types of online content.</p>
-        </div>
-        <div class="faq-item">
-            <h3>Is it necessary to log in to use the Keyword Extractor tool?</h3>
-            <p>No, you don’t need to log in to use the Keyword Extractor tool. Simply paste the URL into the input field, and the tool will instantly generate the keywords for you without requiring an account or login.</p>
-        </div>
-        <div class="faq-item">
-            <h3>How can the Keyword Grouping and Keyword Density tools benefit my SEO strategy?</h3>
-            <p>The Keyword Grouping tool helps you organize keywords into related groups, improving content relevance and targeting. The Keyword Density tool helps you calculate how often certain keywords appear in your content, ensuring optimal keyword usage for better SEO performance. Both tools work together to refine and optimize your content strategy.</p>
-        </div>
-    </div>
-</section>
+
             <script>
 function toggleDropdown(event) {
   const dropdown = event.target.nextElementSibling;
