--- a/index.html
+++ b/index.html
@@ -420,20 +420,15 @@ p {
 }
 </script>
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2996839415438815"
-     crossorigin="anonymous"></script>
-    <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-82KNQLY0RC"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11525935043"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-82KNQLY0RC');
+  gtag('config', 'AW-11525935043');
 </script>
-
-
-
 </head>
 
 <body>
