--- a/index.html
+++ b/index.html
@@ -406,17 +406,11 @@ p {
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebApplication",
-  "name": "Extract keywords from URL",
+  "@type": "WebPage",
+  "name": "Extract Keywords from URLs",
+  "description": "Extract Bulk or single keywords from Bulk or single URLs in one click instantly.",
   "url": "https://keywordsfromurls.com/",
-  "description": "Extract Bulk or single keywords from Bulk or single URLs in one click instantly."
-    "mainEntityOfPage": "https://keywordsfromurls.com/",
-  "potentialAction": {
-    "@type": "Action",
-    "name": "Extract Keywords from URLs",
-    "target": "https://keywordsfromurls.com/",
-    "actionStatus": "ActiveActionStatus"
-  }
+  "mainEntityOfPage": "https://keywordsfromurls.com/"
 }
 </script>
 
